[gd_scene load_steps=6 format=2]

[ext_resource path="res://Scripts/PooPellets.gd" type="Script" id=1]
[ext_resource path="res://Images/Poojectile.png" type="Texture2D" id=2]
[ext_resource path="res://Audio/Weapons/Rocket Explode.wav" type="AudioStream" id=3]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 2 ) ],
"loop": true,
"name": "Poo",
"speed": 5.0
} ]

[sub_resource type="CircleShape2D" id=2]
radius = 5.0

[node name="PooPellets" type="Area2D"]
collision_layer = 32
script = ExtResource( 1 )

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
frames = SubResource( 1 )
animation = "Poo"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 2 )

[node name="RailShotTimer" type="Timer" parent="."]
wait_time = 0.25
one_shot = true

[node name="Exploder" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 3 )
volume_db = 10.466
attenuation = 2.0
bus = "Poots"

[connection signal="body_entered" from="." to="." method="_on_PooPellets_body_entered"]
[connection signal="timeout" from="RailShotTimer" to="." method="_on_RailShotTimer_timeout"]
